--- a/programdoliczeniawlosow/MainWindow.xaml
+++ b/programdoliczeniawlosow/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Background="lightGray">
-        <Label Content="Program do liczenia włosów" FontSize="40" HorizontalAlignment="Center" FontStyle="Italic"/>
-
+        <Label Content="Program do liczenia włosów" FontSize="40" HorizontalAlignment="Center" FontStyle="Italic" Margin="0,10,0,-10"/>
+      
     </Grid>
 </Window>
