Nadanie nazw TextBoxom

--- a/programdoliczeniawlosow/App.xaml
+++ b/programdoliczeniawlosow/App.xaml
@@ -4,6 +4,7 @@
              xmlns:local="clr-namespace:programdoliczeniawlosow"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="TextBox">
+        </Style>  
     </Application.Resources>
 </Application>
