--- a/programdoliczeniawlosow/MainWindow.xaml
+++ b/programdoliczeniawlosow/MainWindow.xaml
@@ -14,10 +14,10 @@
         <Label Content="Program do liczenia włosów" FontSize="40" HorizontalAlignment="Center" FontStyle="Italic"/>
         <Label Content="Podaj obwód swojej głowy:" FontSize="13" Margin="153,71,426,293"/>
         <Label Content="Podaj długość czoła swojej głowy:" FontSize="13" Margin="429,71,99,293"/>
-        <TextBox TextWrapping="Wrap"  Margin="127,106,413,280"/>
-        <TextBox TextWrapping="Wrap"  Margin="435,106,105,280"/>
+        <TextBox x:Name="Obwglowy" TextWrapping="Wrap"  Margin="127,106,413,280"/>
+        <TextBox x:Name="DlCzola"  TextWrapping="Wrap"  Margin="435,106,105,280"/>
         <TextBlock TextWrapping="Wrap" FontSize="30" Text="Ilość twoich włosów na głowie wynosi:" FontStyle="Italic" Margin="127,185,89,176"/>
-        <TextBox TextWrapping="Wrap" Margin="279,241,271,157"/>
+        <TextBox x:Name="IlWlosow" TextWrapping="Wrap" Margin="279,241,271,157"/>
         <Button Content="RESET" Background="White" FontSize="20" Margin="268,314,256,69"/>
 
     </Grid>
